fix title bubble spacing so all are consistant and look great on all screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,14 @@ h1 {
 /* needs work */
 
 /* Main */
+.title-bubble {
+    margin-bottom: 20px;
+}
+
+.title-bubble-text {
+    padding: 15px;
+}
+
 .floating-section {
     background-color: var(--lighter-background-opaque);
     border: solid 10px var(--border-color-opaque);
